GNOME Bugzilla – Bug 733915
NMClient: disconnect the connectivity check cancellable signal after the call has ended
Last modified: 2014-09-19 18:57:15 UTC
We cannot rely on connectivity data freeing to disconnect the signal, because the simple async result might be kept alive by external code (for example the language runtime for JS), but we must not call dbus_g_proxy_cancel_call() if that cancellable is cancelled or reused afterwards.
Created attachment 281946 [details] [review] NMClient: disconnect the connectivity check cancellable signal after the call has ended
Pushed to master, 0.9.10, and 0.9.8, thanks!